truly fix the commit message overflow

--- a/app/styles/app/layouts/buildheader.sass
+++ b/app/styles/app/layouts/buildheader.sass
@@ -56,6 +56,7 @@
     margin-top: 2em
 
 .repo-main-commit
+  position: relative
   &,
   small
     margin: 0
@@ -66,6 +67,11 @@
   small
     margin-right: .3em
     font-weight: 600
+  @media #{$medium-up}
+    white-space: nowrap
+    overflow: hidden
+    &:after
+      @include fadeOut(right, -90deg, $cream-light)
 
 .repo-main-description
 
